# tritet

./: Cargo.toml  Dockerfile.Arch  README.md  build.rs  run-mesh-example.bash  run_mem_check.bash
.github/workflows/: test_and_coverage.yml  test_on_arch_linux.yml  windows_and_macos.yml
c_code/: IMPORTANT.md  auxiliary.h  constants.h  interface_tetgen.cpp  interface_tetgen.h  interface_triangle.c  interface_triangle.h  main.c  predicates.cxx  rust_interface_triangle.h  tetgen.cxx  tetgen.h  triangle.c  triangle.h  tricall_report.c  tricall_report.h
data/figures/: README.md
examples/: README.md  tetgen_delaunay_1.rs  tetgen_mesh_1.rs  triangle_delaunay_1.rs  triangle_mesh_1.rs  triangle_print_coords.rs  triangle_voronoi_1.rs
src/: constants.rs  conversion.rs  global.rs  lib.rs  paraview.rs  tetgen.rs  tetgen_paraview.rs  to_i32.rs  triangle.rs  trigen.rs  trigen_paraview.rs
tests/: test_triangle_mesh_1.rs
zscripts/: docker-build-image.bash
