[package]
name = "tritet"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Triangle and tetrahedron mesh generators"
homepage = "https://github.com/cpmech/tritet"
repository = "https://github.com/cpmech/tritet"
documentation = "https://docs.rs/tritet"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["2D", "3D", "mesh", "geometry"]

[dependencies]
plotpy = "0.4"
once_cell = "1.12.0"

[build-dependencies]
cc = "1.0"
