[package]
name = "tritet"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "Triangle and tetrahedron mesh generators"
homepage = "https://github.com/cpmech/tritet"
repository = "https://github.com/cpmech/tritet"
documentation = "https://docs.rs/tritet"
readme = "README.md"
categories = ["mathematics", "science"]
keywords = ["2D", "3D", "mesh", "geometry"]

[dependencies]
plotpy = "1.13"
once_cell = "1.21"

[build-dependencies]
cc = "1.2"
